# ICEP-MVP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RFC-0001-intent-constraint-evolution-protocol.md  RFC-0002-intent-declaration.md  RFC-0003-constraints-and-evidence.md  RFC-0004-arbitration-and-conflict.md  RFC-0005-event-log.md  RFC-0006-http-json-transport.md  SECURITY.md  non-goals.md  pyproject.toml  terminology.md
examples/: arbitration.json  constraint.json  event-log.jsonl  event.json  evidence.json  intent.json  world_state.json
icep_mvp/: __init__.py  cli.py
icep_mvp/schemas/: common.json  world_state.json
schemas/: arbitration.json  constraint.json  event.json  evidence.json  intent.json
scripts/: validate_examples.py
